@@ -7,3 +7,7 @@ set(signalcatchertest_SRCS signalcatchertest.cpp)
 kde4_add_unit_test(signalcatchertest TESTNAME signalcatchertest ${signalcatchertest_SRCS})
 target_link_libraries( signalcatchertest ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} ktorrent)
 endif(NOT MSVC)
+
+set(resourcemanagertest_SRCS resourcemanagertest.cpp)
+kde4_add_unit_test(resourcemanagertest TESTNAME resourcemanagertest ${resourcemanagertest_SRCS})
+target_link_libraries( resourcemanagertest ${KDE4_KDECORE_LIBS} ${QT_QTTEST_LIBRARY} ktorrent)
